--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,44 +19,30 @@
         </div>
         <!-------------- NAVIGATION ROW ---------------->
         <nav class="ul-nav-row row">
-                <a href ="./aboutme.html" >About me</a>
-                <a href ="#Work">Work</a>
+                <a href ="./index.html">Work</a>
                 <a href ="#Contact-Me">Contact Me</a>
-                <a href ="#Resume">Resume</a>
+                <a href ="./resume_placeholder.jpg">Resume</a>
         </nav>
       </nav>
     </header>
+    <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
+<main >
+    <h1 id="aboutme">About Me</h1>
+    <div class="mainitems">
+        <div>
+            <a><img src="./aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+        </div>
+        <div class="aboutme-p">
+            <p>
+                My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
+            </p>
+            <p>
+                I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
+            </p>
+        </div>
+    </div>
+</main>
 
-    <main id="Work">
-    <div class="row">
-      <div class="box-1">
-        <a href="https://eileenhlmitchell19.github.io/Dynamic_Day_Calendar/" alt="">
-          <img src="./Calendar2.jpg" alt="Dynamic Day Calendar" class="imagefit">
-        </a>
-        <div class="item2">Pre-Work Assignment</div>
-      </div>
-      <div class="box-2">
-        <a href="https://kimberlym4488.github.io/brewtrek/" alt="">
-          <img src="./brewtrek2.jpg" alt="brewTrek" class="imagefit">
-        </a>
-        <div class="item2">Pre-Work Assignment</div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="box-3">
-        <a href="https://eileenhlmitchell19.github.io/4Q_City_Planning_Quiz/" alt="">
-          <img src="./Planning2.jpg" alt="Planning Quiz" class="imagefit">
-        </a>
-        <div class="item2">Pre-Work Assignment</div>
-      </div>
-      <div class="box-4">
-        <a href="https://eileenhlmitchell19.github.io/Password_Generation_Javascript_Basics/" alt="">
-          <img src="./Password.jpg" alt="Password Generator" class="imagefit">
-        </a>
-        <div class="item2">Pre-Work Assignment</div>
-      </div>
-    </div>
-  </main>
 
     <!--------------------------- FOOTER ------------------------------>
     <footer class="footer" id="Contact-Me">
