many changes. Added project pages for each project with snapshots and descriptions, links to github repo. Still need to make those pages consistent with mobile view

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
+              <h2>Portfolio Website</h2>           
         </div>
         <!-------------- NAVIGATION ROW ---------------->
         <nav class="ul-nav-row row">
@@ -31,30 +32,29 @@
     <main id="Work">
     <div class="row">
       <div class="box-1">
-        <a href="https://eileenhlmitchell19.github.io/Dynamic_Day_Calendar/" alt="">
+        <a href="./dcalendar.html" alt="">
           <img src="./Calendar2.jpg" alt="Dynamic Day Calendar" class="imagefit">
         </a>
-        <div class="item2">Pre-Work Assignment</div>
+        <div class="item2">Dynamic Day Calendar</div>
       </div>
       <div class="box-2">
-        <a href="https://kimberlym4488.github.io/brewtrek/" alt="">
+        <a href="./brewtrek.html" alt="">
           <img src="./brewtrek2.jpg" alt="brewTrek" class="imagefit">
         </a>
-        <div class="item2">Pre-Work Assignment</div>
-      </div>
+        <div class="item2">brewTrek</div>
     </div>
     <div class="row">
       <div class="box-3">
-        <a href="https://eileenhlmitchell19.github.io/4Q_City_Planning_Quiz/" alt="">
+        <a href="./pquiz.html" alt="">
           <img src="./Planning2.jpg" alt="Planning Quiz" class="imagefit">
         </a>
-        <div class="item2">Pre-Work Assignment</div>
+        <div class="item2">Planning Quiz</div>
       </div>
       <div class="box-4">
         <a href="https://eileenhlmitchell19.github.io/Password_Generation_Javascript_Basics/" alt="">
           <img src="./Password.jpg" alt="Password Generator" class="imagefit">
         </a>
-        <div class="item2">Pre-Work Assignment</div>
+        <div class="item2">Password Generator</div>
       </div>
     </div>
   </main>
