--- a/pquiz.html
+++ b/pquiz.html
@@ -1,5 +1,4 @@
-
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -27,18 +26,19 @@
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
 <main >
-    <h1 id="aboutme">About Me</h1>
+    <h1 id="aboutme">Planning Quiz</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+            <a><img src="./quiz1.2.jpg" alt="Questions Page" id="questionsimg"></a>
+        </div>
+        <div>
+            <a><img src="./quiz1.3.jpg" alt="Score Page" id="scoreimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
-                My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
+                The Planning Quiz is an app that can be used to take a short four question quiz on city and regional planning. No cheating, and if you try, think again because the clock is running! Time will be deducted for an incorrect answer, so answer carefully! 
             </p>
-            <p>
-                I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
-            </p>
+            <a href="https://github.com/eileenhlmitchell19/4Q_City_Planning_Quiz" alt="">Github Repository</a>
         </div>
     </div>
 </main>
