--- a/brewtrek.html
+++ b/brewtrek.html
@@ -1,5 +1,4 @@
-
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -27,18 +26,21 @@
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
 <main >
-    <h1 id="aboutme">About Me</h1>
+    <h1 id="aboutme">brewTrek</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+            <a><img src="./Breweries.PNG" alt="Breweries Page" id="breweriesimg"></a>
+        </div>
+        <div>
+            <a><img src="./Homebrew.PNG" alt="Home Page" id="homebrewimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
-                My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
+                BrewTrek is an app that can be used to navigate to your favorite brewery in any city in the United States. Look for a brewery, add your favorites, view brewery locations on google maps or look up that breweries information through the easy to use app. The options are limitless, and make a night out fast and easy!
             </p>
-            <p>
-                I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
-            </p>
+            <div class="item2"></div>
+            <a href="https://github.com/kimberlym4488/brewtrek" alt="">Github Repository</a>
+        </div>
         </div>
     </div>
 </main>
