--- a/dcalendar.html
+++ b/dcalendar.html
@@ -1,6 +1,4 @@
-
-  <head>
-    <meta charset="UTF-8" />
+<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link
@@ -27,18 +25,21 @@
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
 <main >
-    <h1 id="aboutme">About Me</h1>
+    <h1 id="aboutme">Dynamic Day Calendar</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+            <a><img src="./Calendar1.jpg" alt="Breweries Page" id="breweriesimg"></a>
+        </div>
+        <div>
+            <a><img src="./Calendar2.jpg" alt="Home Page" id="homebrewimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
-                My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
+                The Dynamic Day Calendar is an app that can be used to track your schedule throughout the day. Check the hour, fill out your schedule and check out what is coming up next as the day goes on! The schedule will automatically follow along as the day goes on and track the time for you.
             </p>
-            <p>
-                I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
-            </p>
+            <div class="item2"></div>
+            <a href="https://github.com/eileenhlmitchell19/Dynamic_Day_Calendar" alt="">Github Repository</a>
+        </div>
         </div>
     </div>
 </main>
