--- a/pgen.html
+++ b/pgen.html
@@ -1,5 +1,4 @@
-
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -27,18 +26,19 @@
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
 <main >
-    <h1 id="aboutme">About Me</h1>
+    <h1 id="aboutme">Password Generator</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+            <a><img src="./openingprompt.png" alt="Questions Page" id="openpromptimg"></a>
+        </div>
+        <div>
+            <a><img src="./generated.png" alt="Score Page" id="generatedimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
-                My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
+                The Password Generator says it all in the title. Decide what types of characters you would like to use and the length of your password, and voila! A new password has been generated for your using pleasure. Go nuts!
             </p>
-            <p>
-                I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
-            </p>
+            <a href="https://github.com/eileenhlmitchell19/Password_Generation_Javascript_Basics" alt="">Github Repository</a>
         </div>
     </div>
 </main>
