fix a few bugs, add deployed website urls

--- a/brewtrek.html
+++ b/brewtrek.html
@@ -39,7 +39,10 @@
                 BrewTrek is an app that can be used to navigate to your favorite brewery in any city in the United States. Look for a brewery, add your favorites, view brewery locations on google maps or look up that breweries information through the easy to use app. The options are limitless, and make a night out fast and easy!
             </p>
             <div class="item2"></div>
+          <div class="links">
             <a href="https://github.com/kimberlym4488/brewtrek" alt="">Github Repository</a>
+            <a href="https://kimberlym4488.github.io/brewtrek/" alt="">https://kimberlym4488.github.io/brewtrek/</a>
+            </div>
         </div>
         </div>
     </div>
