--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <div class="row">
       <div class="box-3">
         <a href="./pquiz.html" alt="">
-          <img src="./Planning2.jpg" alt="Planning Quiz" class="imagefit">
+          <img src="./planning2.jpg" alt="Planning Quiz" class="imagefit">
         </a>
         <div class="item2">Planning Quiz</div>
       </div>
       <div class="box-4">
-        <a href="https://eileenhlmitchell19.github.io/Password_Generation_Javascript_Basics/" alt="">
+        <a href="./pgen.html" alt="">
           <img src="./Password.jpg" alt="Password Generator" class="imagefit">
         </a>
         <div class="item2">Password Generator</div>
