--- a/pgen.html
+++ b/pgen.html
@@ -38,7 +38,10 @@
             <p>
                 The Password Generator says it all in the title. Decide what types of characters you would like to use and the length of your password, and voila! A new password has been generated for your using pleasure. Go nuts!
             </p>
-            <a href="https://github.com/eileenhlmitchell19/Password_Generation_Javascript_Basics" alt="">Github Repository</a>
+          <div class="links">
+            <a href="https://github.com/eileenhlmitchell19/Password_Generation_Javascript_Basics" alt="">Github Repository</a> 
+            <a href="https://eileenhlmitchell19.github.io/Password_Generation_Javascript_Basics/" alt="">https://eileenhlmitchell19.github.io/Password_Generation_Javascript_Basics/</a>
+          </div>
         </div>
     </div>
 </main>
