--- a/pquiz.html
+++ b/pquiz.html
@@ -38,7 +38,10 @@
             <p>
                 The Planning Quiz is an app that can be used to take a short four question quiz on city and regional planning. No cheating, and if you try, think again because the clock is running! Time will be deducted for an incorrect answer, so answer carefully! 
             </p>
-            <a href="https://github.com/eileenhlmitchell19/4Q_City_Planning_Quiz" alt="">Github Repository</a>
+          </div class="links">
+              <a href="https://github.com/eileenhlmitchell19/4Q_City_Planning_Quiz" alt="">Github Repository</a>
+            <a href="https://eileenhlmitchell19.github.io/4Q_City_Planning_Quiz/" alt="">https://eileenhlmitchell19.github.io/4Q_City_Planning_Quiz/</a>
+          </div>
         </div>
     </div>
 </main>
