--- a/dcalendar.html
+++ b/dcalendar.html
@@ -38,7 +38,10 @@
                 The Dynamic Day Calendar is an app that can be used to track your schedule throughout the day. Check the hour, fill out your schedule and check out what is coming up next as the day goes on! The schedule will automatically follow along as the day goes on and track the time for you.
             </p>
             <div class="item2"></div>
+          <div class="links">
             <a href="https://github.com/eileenhlmitchell19/Dynamic_Day_Calendar" alt="">Github Repository</a>
+            <a href="https://eileenhlmitchell19.github.io/Dynamic_Day_Calendar/" alt="">Link: https://eileenhlmitchell19.github.io/Dynamic_Day_Calendar/</a>
+          </div>
         </div>
         </div>
     </div>
