adding all new projects and their html pages, reformatting, adding background images. Still need to fix those a bit. Next to update resume

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,10 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
+   
   </head>
 
   <!----------------------------- BODY ----------------------------------->
@@ -30,7 +27,7 @@
     <h1 id="aboutme">About Me</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+            <a><img src="./Images/aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
