--- a/brewtrek.html
+++ b/brewtrek.html
@@ -6,12 +6,13 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   </head>
 
   <!----------------------------- BODY ----------------------------------->
   <body>
   <!---------------------------- HEADER ----------------------------------> 
-    <header class="header">
+    <header class="header header-image">
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
@@ -25,14 +26,14 @@
       </nav>
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
-<main >
+<main class="background-image2">
     <h1 id="aboutme">brewTrek</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./Breweries.PNG" alt="Breweries Page" id="breweriesimg"></a>
+            <a><img src="./Images/Breweries.PNG" alt="Breweries Page" id="breweriesimg"></a>
         </div>
         <div>
-            <a><img src="./Homebrew.PNG" alt="Home Page" id="homebrewimg"></a>
+            <a><img src="./Images/Homebrew.PNG" alt="Home Page" id="homebrewimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
