--- a/calendar.html
+++ b/calendar.html
@@ -29,10 +29,10 @@
     <h1 id="aboutme">Dynamic Day Calendar</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./Calendar1.jpg" alt="Questions Page" id="calendarimg1"></a>
+            <a><img src="./Images/Calendar1.jpg" alt="Questions Page" id="calendarimg1"></a>
         </div>
         <div>
-            <a><img src="./Calendar2.jpg" alt="Score Page" id="calendarimg2"></a>
+            <a><img src="./Images/Calendar2.jpg" alt="Score Page" id="calendarimg2"></a>
         </div>
         <div class="aboutme-p">
             <p>
