--- a/dcalendar.html
+++ b/dcalendar.html
@@ -10,7 +10,7 @@
   <!----------------------------- BODY ----------------------------------->
   <body>
   <!---------------------------- HEADER ----------------------------------> 
-    <header class="header">
+    <header class="header header-image">
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
@@ -24,14 +24,14 @@
       </nav>
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
-<main >
+<main class="background-image2">
     <h1 id="aboutme">Dynamic Day Calendar</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./Calendar1.jpg" alt="Breweries Page" id="breweriesimg"></a>
+            <a><img src="./Images/Calendar1.jpg" alt="Breweries Page" id="breweriesimg"></a>
         </div>
         <div>
-            <a><img src="./Calendar2.jpg" alt="Home Page" id="homebrewimg"></a>
+            <a><img src="./Images/Calendar2.jpg" alt="Home Page" id="homebrewimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
