--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
 
   <!----------------------------- BODY ----------------------------------->
-  <body>
+  <body class="background-image">
   <!---------------------------- HEADER ----------------------------------> 
-    <header class="header">
+    <header class="header header-image">
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
@@ -24,40 +24,95 @@
                 <a href ="./aboutme.html" >About me</a>
                 <a href ="#Work">Work</a>
                 <a href ="#Contact-Me">Contact Me</a>
-                <a href ="#Resume">Resume</a>
+                <a href ="./resume_placeholder.jpg">Resume</a>
         </nav>
       </nav>
     </header>
 
+    <div class="container">
+      <div class="row">
+        <div class="col box-1">
+          <div class ="box-title">Dynamic Day Calendar</div>
+          <a href="./dcalendar.html" alt="">
+            <img src="./Images/Calendar2.jpg" alt="Dynamic Day Calendar" class="imagefit">
+          </a>
+        </div>
+        <div class="col box-2">
+          <div class ="box-title">brewTrek</div>
+          <a href="./brewtrek.html" alt="">
+            <img src="./Images/brewtrek2.jpg" alt="brewTrek" class="imagefit">
+          </a>
+        </div>
+        <div class="w-100"></div>
+        <div class="col box-3">
+          <div class ="box-title">Planning Quiz</div>
+          <a href="./pquiz.html" alt="">
+            <img src="./Images/planning2.jpg" alt="Planning Quiz" class="imagefit">
+          </a>
+        </div>
+        <div class="col box-4">
+          <div class ="box-title">Password Generator</div>
+          <a href="./pgen.html" alt="">
+            <img src="./Images/Password.jpg" alt="Password Generator" class="imagefit">
+          </a>
+        </div>
+        <div class="col box-5">
+          <div class ="box-title">Note Scribbler</div>
+          <a href="./NoteScribbler.html" alt="">
+            <img src="./Images/11-express-homework-demo-01.png" alt="Note Scribbler" class="imagefit">
+          </a>
+        </div>
+        <div class="col box-6">
+          <div class ="box-title">README Generator</div>
+          <a href="./READMEGEN.html" alt="">
+            <img src="./Images/READMEGEN.jpg" alt="README Generator" class="imagefit">
+          </a>
+        </div>
+        <div class="col box-4">
+          <div class ="box-title">Employee Tracking</div>
+          <a href="./EmployeeTracking.html" alt="">
+            <img src="./Images/EmployeeTracking.jpg" alt="Employee Tracking" class="imagefit">
+          </a>
+        </div>
+        <div class="col box-7">
+          <div class ="box-title">HobbyHub</div>
+          <a href="./HobbyHub.html" alt="">
+            <img src="./Images/Login.png" alt="HobbyHub Login Page" class="imagefit">
+          </a>
+        </div>
+      </div>
+    </div>
+
+    
     <main id="Work">
     <div class="row">
-      <div class="box-1">
+      <!-- <div class="box-1">
         <a href="./dcalendar.html" alt="">
           <img src="./Calendar2.jpg" alt="Dynamic Day Calendar" class="imagefit">
-        </a>
-        <div class="item2">Dynamic Day Calendar</div>
-      </div>
-      <div class="box-2">
+        </a> -->
+        <!-- <div class="item2">Dynamic Day Calendar</div>
+      </div> -->
+      <!-- <div class="box-2">
         <a href="./brewtrek.html" alt="">
           <img src="./brewtrek2.jpg" alt="brewTrek" class="imagefit">
         </a>
         <div class="item2">brewTrek</div>
-    </div>
-    <div class="row">
+    </div> -->
+    <!-- <div class="row">
       <div class="box-3">
         <a href="./pquiz.html" alt="">
           <img src="./planning2.jpg" alt="Planning Quiz" class="imagefit">
         </a>
         <div class="item2">Planning Quiz</div>
-      </div>
-      <div class="box-4">
+      </div> -->
+      <!-- <div class="box-4">
         <a href="./pgen.html" alt="">
           <img src="./Password.jpg" alt="Password Generator" class="imagefit">
         </a>
         <div class="item2">Password Generator</div>
       </div>
     </div>
-  </main>
+  </main> -->
 
     <!--------------------------- FOOTER ------------------------------>
     <footer class="footer" id="Contact-Me">
