--- a/pgen.html
+++ b/pgen.html
@@ -9,9 +9,9 @@
   </head>
 
   <!----------------------------- BODY ----------------------------------->
-  <body>
+  <body class="page-content">
   <!---------------------------- HEADER ----------------------------------> 
-    <header class="header">
+    <header class="header header-image">
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
@@ -25,14 +25,14 @@
       </nav>
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
-<main >
+<main class="background-image2">
     <h1 id="aboutme">Password Generator</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./openingprompt.png" alt="Questions Page" id="openpromptimg"></a>
+            <a><img src="./Images/openingprompt.png" alt="Questions Page" id="openpromptimg"></a>
         </div>
         <div>
-            <a><img src="./generated.png" alt="Score Page" id="generatedimg"></a>
+            <a><img src="./Images/generated.png" alt="Score Page" id="generatedimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
