--- a/pquiz.html
+++ b/pquiz.html
@@ -11,7 +11,7 @@
   <!----------------------------- BODY ----------------------------------->
   <body>
   <!---------------------------- HEADER ----------------------------------> 
-    <header class="header">
+    <header class="header header-image">
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
@@ -25,14 +25,14 @@
       </nav>
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
-<main >
+<main class="background-image2">
     <h1 id="aboutme">Planning Quiz</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./quiz1.2.jpg" alt="Questions Page" id="questionsimg"></a>
+            <a><img src="./Images/quiz1.2.jpg" alt="Questions Page" id="questionsimg"></a>
         </div>
         <div>
-            <a><img src="./quiz1.3.jpg" alt="Score Page" id="scoreimg"></a>
+            <a><img src="./Images/quiz1.3.jpg" alt="Score Page" id="scoreimg"></a>
         </div>
         <div class="aboutme-p">
             <p>
