fixing background and styles

--- a/brewtrek.html
+++ b/brewtrek.html
@@ -1,4 +1,4 @@
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -6,7 +6,6 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   </head>
 
   <!----------------------------- BODY ----------------------------------->
@@ -29,22 +28,18 @@
 <main class="background-image2">
     <h1 id="aboutme">brewTrek</h1>
     <div class="mainitems">
-        <div>
-            <a><img src="./Images/Breweries.PNG" alt="Breweries Page" id="breweriesimg"></a>
-        </div>
-        <div>
-            <a><img src="./Images/Homebrew.PNG" alt="Home Page" id="homebrewimg"></a>
-        </div>
+      <div>
+        <a><img src="./Images/Breweries.PNG" alt="Breweries Page" id="breweriesimg"></a>
+    </div>
+    <div>
+        <a><img src="./Images/Homebrew.PNG" alt="Home Page" id="homebrewimg"></a>
+    </div>
         <div class="aboutme-p">
             <p>
-                BrewTrek is an app that can be used to navigate to your favorite brewery in any city in the United States. Look for a brewery, add your favorites, view brewery locations on google maps or look up that breweries information through the easy to use app. The options are limitless, and make a night out fast and easy!
+              BrewTrek is an app that can be used to navigate to your favorite brewery in any city in the United States. Look for a brewery, add your favorites, view brewery locations on google maps or look up that breweries information through the easy to use app. The options are limitless, and make a night out fast and easy!
             </p>
-            <div class="item2"></div>
-          <div class="links">
-            <a href="https://github.com/kimberlym4488/brewtrek" alt="">Github Repository</a>
+            <a href="https://kimberlym4488.github.io/brewtrek/" alt="">Github Repository</a>
             <a href="https://kimberlym4488.github.io/brewtrek/" alt="">https://kimberlym4488.github.io/brewtrek/</a>
-            </div>
-        </div>
         </div>
     </div>
 </main>
