finishing w resume and final fix of about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,15 +1,18 @@
 
-  <head>
+ <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-   
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
   </head>
 
   <!----------------------------- BODY ----------------------------------->
   <body>
   <!---------------------------- HEADER ----------------------------------> 
-    <header class="header">
+    <header class="header header-image">
       <nav class="nav row">
         <div class="nav-title">
             <h1>Eileen Mitchell</h1>
@@ -23,19 +26,20 @@
       </nav>
     </header>
     <!---------------------- MAIN DATA - ABOUT ME ------------------------> 
-<main >
+<main class="background-image3">
     <h1 id="aboutme">About Me</h1>
     <div class="mainitems">
         <div>
-            <a><img src="./Images/aboutme1.jpg" alt="Dynamic Day Calendar" id="aboutmeimg"></a>
+            <a><img src="./Images/aboutme1.jpg" alt="Score Page" id="aboutmeimg"></a>
         </div>
         <div class="aboutme-p">
-            <p>
-                My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
-            </p>
-            <p>
-                I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
-            </p>
+          <p>
+            My name is Eileen Mitchell. I am from Visalia, CA and graduated with a BS in City and Regional Planning, Minor in Political Science and Certificate in Geographic Information Systems (GIS) from Fresno State University.
+        </p>
+        <p>
+            I recently began a new coding bootcamp through the University of Washington in Fullstack Development and now reside in Bothell, WA working as a permit technician for a civil engineering firm. I love what I do, but have been intrigued by the world of tech. One similarity I have found  between both of these jobs is the need to look for solutions, wherever they might be. I find this exciting, and am continuing to expand my knowledge through various projects.
+        </p>
+            <a href="https://github.com/eileenhlmitchell19/Dynamic_Day_Calendar" alt="">Github Repository</a>
         </div>
     </div>
 </main>
