--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href ="./aboutme.html" >About me</a>
                 <a href ="#Work">Work</a>
                 <a href ="#Contact-Me">Contact Me</a>
-                <a href ="./resume_placeholder.jpg">Resume</a>
+                <a href ="./Resume.pdf">Resume</a>
         </nav>
       </nav>
     </header>
